--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "import": "./dist/kiut-ui.es.js",
       "require": "./dist/kiut-ui.umd.js"
     },
+    "./src/*": "./src/*",
     "./dist/style.css": "./dist/kiut-library-ui.css",
     "./style.css": "./dist/kiut-library-ui.css",
     "./css": "./dist/kiut-library-ui.css"
