--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,5 +13,9 @@
     "noUncheckedSideEffectImports": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": [
+    "src/stories/**/*",
+    "**/*.stories.ts"
+  ]
 }
