--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "vue": "^3.5.24",
     "vue-chartjs": "^5.3.3"
   },
+  "peerDependencies": {
+    "moment": "^2.29.0",
+    "vue": "^3.3.0"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
     "@storybook/addon-a11y": "^10.0.8",
